# alcyon

./: .Rbuildignore  .gitattributes  .gitignore  .gitmodules  .lintr  404.html  CRAN-SUBMISSION  DESCRIPTION  NAMESPACE  NEWS.md  README.md  REUSE.toml  _pkgdown.yml  alcyon.Rproj  authors.html  authors.md  cleanup  configure  configure.ac  configure.win  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: check-no-suggests.yaml  check-no-suggests.yml  lint.yaml  pkgdown.yaml  r-asan.yaml  r-fedora-latest.yaml  r.yaml  r.yml  reuse.yaml  rhub-on-push.yaml  rhub.yaml
.reuse/: dep5
R/: AgentLookMode.R  AllLineShapeGraph.R  AxialShapeGraph.R  LatticeMap.R  PointMap.R  SegmentShapeGraph.R  ShapeGraph.R  ShapeMap.R  TraversalType.R  agentAnalysis.R  agentLook.R  allFewestLineMap.R  allToAllTraverse.R  axialAnalysis.R  cliHelp.R  convertMap.R  depth.R  depthmapXcli.R  export.R  generateRandomCapString.R  generics.R  getTopFeatures.R  helper-loadMapsRoxygen.R  helper-processResult.R  import.R  isovist.R  link.R  makeTempPointFile.R  matchPointsToLines.R  oneToAllTraverse.R  oneToOneTraverse.R  palettes.R  prepareVGA.R  rcppRoxygen.R  readMetaGraph.R  refIDtoIndex.R  segmentAnalysis.R  segmentTulipLeafChoice.R  sfConversions.R  shapegraphToGraphData.R  (+6 more)
articles/: agentAnalysis.html  agentAnalysis.md  axialAnalysis.html  axialAnalysis.md  index.html  index.md  isovists.html  isovists.md  segmentAnalysis.html  segmentAnalysis.md  vga.html  vga.md
inst/: CITATION  WORDLIST
man/: AgentLookMode.Rd  AllLineShapeGraph-class.Rd  AxialShapeGraph-class.Rd  AxialShapeGraph_subset.Rd  LatticeMap-class.Rd  LatticeMap_subset.Rd  PointMap-class.Rd  PointMap_subset.Rd  SegmentShapeGraph-class.Rd  SegmentShapeGraph_subset.Rd  ShapeGraph-class.Rd  ShapeMap-class.Rd  ShapeMap_subset.Rd  TraversalType.Rd  VGA.Rd  VGALocalAlgorithm.Rd  agentAnalysis.Rd  allToAllTraverse.Rd  as.Rd  axialAnalysis.Rd  axialAnalysisLocal.Rd  axialToSegmentShapeGraph.Rd  blockLines.Rd  cliHelp.Rd  connections-AxialShapeGraph-method.Rd  connections-LatticeMap-method.Rd  connections-PointMap-method.Rd  connections-SegmentShapeGraph-method.Rd  connections.Rd  convertMap.Rd  createGrid.Rd  depth.Rd  export.Rd  fillGrid.Rd  getTopFeatures.Rd  import.Rd  isovist.Rd  isovist2pts.Rd  linkCoords-AxialShapeGraph-method.Rd  linkCoords-LatticeMap-method.Rd  (+53 more)
news/: index.html  index.md
reference/: AgentLookMode.html  AgentLookMode.md  AllLineShapeGraph-class.html  AllLineShapeGraph-class.md  AxialShapeGraph-class.html  AxialShapeGraph-class.md  AxialShapeGraph.html  AxialShapeGraph_subset.html  AxialShapeGraph_subset.md  LatticeMap-class.html  LatticeMap-class.md  LatticeMap.html  LatticeMap_subset.html  LatticeMap_subset.md  PointMap-class.html  PointMap.html  PointMap_subset.html  SegmentShapeGraph-class.html  SegmentShapeGraph-class.md  SegmentShapeGraph.html  SegmentShapeGraph_subset.html  SegmentShapeGraph_subset.md  ShapeMap-class.html  ShapeMap-class.md  ShapeMap.html  ShapeMap_subset.html  ShapeMap_subset.md  TraversalType.html  TraversalType.md  VGALocalAlgorithm.html  VGALocalAlgorithm.md  [.AxialShapeGraph.html  [.LatticeMap.html  [.PointMap.html  [.SegmentShapeGraph.html  [.ShapeMap.html  agentAnalysis.html  agentAnalysis.md  allToAllTraverse.html  allToAllTraverse.md  (+118 more)
scripts/: buildContainer.sh  pushToDockerHub.sh  runContainerInteractive.sh
src/: .clang-format  AgentLookMode.h  AllLineMap.cpp  Makevars  Makevars.in  Makevars.win  PointMap.cpp  PointMap.h  ShapeGraph.cpp  ShapeMap.cpp  ShapeMap.h  TraversalType.h  aedon_types.h  agentAnalysis.cpp  agentLook.h  alcyon_types.h  allFewest.cpp  analysis_agent.cpp  analysis_allFewest.cpp  analysis_axial.cpp  analysis_segment.cpp  analysis_segmentDepth.cpp  analysis_segmentShortestPath.cpp  analysis_segmentTulipLeafChoice.cpp  analysis_vgaDepth.cpp  analysis_vgaGlobal.cpp  analysis_vgaIsovist.cpp  analysis_vgaLocal.cpp  analysis_vgaShortestPath.cpp  attrHelper.h  axialAnalysis.cpp  communicator.cpp  communicator.h  communicator.hpp  convertExternal.cpp  convertInternal.cpp  enum_AgentLookMode.h  enum_TraversalType.h  enum_TraversalType.hpp  enum_VGALocalAlgorithm.h  (+36 more)
src/libs/: CMakeLists.txt
tests/: testthat.R
tests/testthat/: helper-loadMaps.R  test-AxialShapeGraph.R  test-LatticeMap.R  test-MetaGraph.R  test-PointMap.R  test-ShapeMap.R  test-cpp.R  (+11 more)
vignettes/: agentAnalysis.Rmd  axialAnalysis.Rmd  isovists.Rmd  segmentAnalysis.Rmd  vga.Rmd
(+11 files in other folders)
